--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "formik": "^2.2.9",
-    "next": "12.1.6",
+    "iron-session": "^6.1.3",
+    "next": "^12.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-query": "^3.39.1",
