--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
+    "cssnano": "^5.1.12",
     "formik": "^2.2.9",
     "iron-session": "^6.1.3",
     "next": "^12.2.0",
