--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-query": "^3.39.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
