--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "connect-redis": "^6.1.3",
     "cookie": "^0.5.0",
     "cssnano": "^5.1.12",
+    "express-session": "^1.17.3",
     "formik": "^2.2.9",
-    "iron-session": "^6.1.3",
+    "ioredis": "^5.1.0",
     "next": "^12.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -22,7 +24,9 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/cookie": "^0.5.1",
+    "@types/express-session": "^1.17.4",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
